bot overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   scroll-behavior: smooth;
 } */
 
+
 /* *{
   border: 1px solid;
 } */
@@ -35,30 +36,18 @@ body {
 }
 
 
-.kk{
-  background-image: linear-gradient(45deg, transparent 0%, transparent 11%,rgba(156, 156, 156,0.06) 11%, rgba(156, 156, 156,0.06) 81%,transparent 81%, transparent 100%),linear-gradient(45deg, transparent 0%, transparent 18%,rgba(156, 156, 156,0.06) 18%, rgba(156, 156, 156,0.06) 64%,transparent 64%, transparent 100%),linear-gradient(135deg, transparent 0%, transparent 13%,rgba(156, 156, 156,0.06) 13%, rgba(156, 156, 156,0.06) 22%,transparent 22%, transparent 100%),linear-gradient(90deg, rgb(0,0,0),rgb(0,0,0));
+.kk {
+  background-image: linear-gradient(45deg, transparent 0%, transparent 11%, rgba(156, 156, 156, 0.06) 11%, rgba(156, 156, 156, 0.06) 81%, transparent 81%, transparent 100%), linear-gradient(45deg, transparent 0%, transparent 18%, rgba(156, 156, 156, 0.06) 18%, rgba(156, 156, 156, 0.06) 64%, transparent 64%, transparent 100%), linear-gradient(135deg, transparent 0%, transparent 13%, rgba(156, 156, 156, 0.06) 13%, rgba(156, 156, 156, 0.06) 22%, transparent 22%, transparent 100%), linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
 }
 
 #bp-web-widget {
   position: fixed;
-  /* width: 100vw; */
-  /* height: 100vh; */
-  /* display: grid; */
-  /* place-content: center; */
-  bottom:1rem;
-  right:1rem;
+  bottom: 1rem;
   transform: scale(1);
-  animation: mymove 2s infinite linear;
-  /* Adjust this value to change the horizontal position */
-}
-@keyframes mymove {
-  50% {transform: translateY(4px);}
-  /* to {transform: translateY(0);} */
 }
 
-
-.edu-ex{
-  background-image: linear-gradient(148deg, rgba(15, 15, 15,0.04) 0%, rgba(15, 15, 15,0.04) 35%,rgba(113, 113, 113,0.04) 35%, rgba(113, 113, 113,0.04) 42%,rgba(210, 210, 210,0.04) 42%, rgba(210, 210, 210,0.04) 100%),linear-gradient(70deg, rgba(15, 15, 15,0.04) 0%, rgba(15, 15, 15,0.04) 25%,rgba(113, 113, 113,0.04) 25%, rgba(113, 113, 113,0.04) 30%,rgba(210, 210, 210,0.04) 30%, rgba(210, 210, 210,0.04) 100%),linear-gradient(65deg, rgba(15, 15, 15,0.04) 0%, rgba(15, 15, 15,0.04) 13%,rgba(113, 113, 113,0.04) 13%, rgba(113, 113, 113,0.04) 27%,rgba(210, 210, 210,0.04) 27%, rgba(210, 210, 210,0.04) 100%),linear-gradient(90deg, rgb(0,0,0),rgb(0,0,0));
+.edu-ex {
+  background-image: linear-gradient(148deg, rgba(15, 15, 15, 0.04) 0%, rgba(15, 15, 15, 0.04) 35%, rgba(113, 113, 113, 0.04) 35%, rgba(113, 113, 113, 0.04) 42%, rgba(210, 210, 210, 0.04) 42%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(70deg, rgba(15, 15, 15, 0.04) 0%, rgba(15, 15, 15, 0.04) 25%, rgba(113, 113, 113, 0.04) 25%, rgba(113, 113, 113, 0.04) 30%, rgba(210, 210, 210, 0.04) 30%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(65deg, rgba(15, 15, 15, 0.04) 0%, rgba(15, 15, 15, 0.04) 13%, rgba(113, 113, 113, 0.04) 13%, rgba(113, 113, 113, 0.04) 27%, rgba(210, 210, 210, 0.04) 27%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
 }
 
 .mast {
@@ -190,7 +179,7 @@ body {
 
 
 
-.magicpattern { 
+.magicpattern {
   width: 100vw;
   height: 100vh;
   background-size: cover;
